# resolvedesk

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: admin_api.py  admin_metrics.py  agent.py  api.py  auth.py  config.py  db.py  escalation.py  intent.py  llm.py  main.py  models.py  policy.py  rag.py  ratelimit.py
app/tools/: __init__.py  escalate_to_human.py  file_warranty_claim.py  get_customer_orders.py  get_order_details.py  initiate_refund.py  search_kb.py  update_shipping_address.py
data/: seed.py
data/kb/: account-help.md  cancellations.md  discounts-promotions.md  payment-issues.md  product-faq-audio.md  (+6 more)
docs/: SIMPLE-EXPLANATION.md
evals/: fixtures.py  run.py  runner.py  scenarios.py  suite.py
tests/: test_admin_api.py  test_admin_dashboard_e2e.py  test_admin_metrics.py  test_admin_trace.py  test_agent.py  test_api_chat.py  test_api_restart.py  test_auth.py  test_create_escalation.py  test_escalation_claim.py  test_escalation_packet.py  test_escalation_triggers.py  test_eval_cli.py  test_eval_fixtures.py  test_eval_runner.py  test_eval_scenarios.py  test_eval_suite.py  test_handoff_packet.py  test_intent.py  test_llm_gemini_message_conversion.py  test_llm_gemini_retry.py  test_llm_message_conversion.py  test_pending_action_persistence.py  test_policy.py  test_rag_chunking.py  test_rag_cosine.py  test_rag_retrieve.py  test_ratelimit.py  test_refund_policy.py  test_seed.py  test_seed_admin_demo.py  test_seed_domain.py  test_tools_read.py  test_tools_write.py
web/: package-lock.json  package.json
(+102 files in other folders)
